# kim-property

./: .appveyor.yml  .codecov.yml  .gitattributes  .gitignore  .gitmodules  .travis.yml  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pythonpackage.yml  pythonpublish.yml
kim_property/: __init__.py  _version.py  create.py  definition.py  destroy.py  dump.py  ednify.py  err.py  instance.py  modify.py  numeric.py  pickle.py  remove.py
kim_property/properties/: cohesive-energy-lattice-invariant-shear-path-cubic-crystal.edn  cohesive-energy-lattice-invariant-shear-unrelaxed-path-cubic-crystal.edn  cohesive-energy-shear-stress-path-cubic-crystal.edn  cohesive-potential-energy-2d-hexagonal-crystal.edn  cohesive-potential-energy-cubic-crystal.edn  configuration-cluster-fixed.edn  configuration-nonorthogonal-periodic-3d-cell-relaxed-particles-fixed.edn  configuration-nonorthogonal-periodic-3d-cell-relaxed-particles-relaxed.edn  elastic-constants-first-strain-gradient-isothermal-cubic-crystal-npt.edn  elastic-constants-first-strain-gradient-isothermal-monoatomic-hexagonal-crystal-npt.edn  elastic-constants-isothermal-cubic-crystal-npt.edn  enthalpy-of-mixing-curve-substitutional-binary-cubic-crystal-npt.edn  extrinsic-stacking-fault-relaxed-energy-fcc-crystal-npt.edn  gamma-surface-relaxed-fcc-crystal-npt.edn  grain-boundary-symmetric-tilt-energy-relaxed-cubic-crystal.edn  grain-boundary-symmetric-tilt-energy-relaxed-relation-cubic-crystal.edn  intrinsic-stacking-fault-relaxed-energy-fcc-crystal-npt.edn  kim_properties.edn  kim_properties.pickle  melting-temperature-constant-pressure-cubic-crystal.edn  monovacancy-formation-energy-monoatomic-cubic-diamond.edn  monovacancy-neutral-relaxed-formation-potential-energy-crystal-npt.edn  phonon-dispersion-dos-cubic-crystal-npt.edn  stacking-fault-relaxed-energy-curve-fcc-crystal-npt.edn  structure-2d-hexagonal-crystal-npt.edn  structure-cubic-crystal-npt.edn  structure-monoclinic-crystal-npt.edn  structure-orthorhombic-crystal-npt.edn  structure-tetragonal-crystal-npt.edn  structure-triclinic-crystal-npt.edn  surface-energy-broken-bond-fit-cubic-bravais-crystal-npt.edn  surface-energy-cubic-crystal-npt.edn  unstable-stacking-fault-relaxed-energy-fcc-crystal-npt.edn  unstable-twinning-fault-relaxed-energy-fcc-crystal-npt.edn  verification-check.edn
tests/fixtures/: cohesive-energy-relation-cubic-crystal.edn  new-property.edn
tests/test_kim_property/: __init__.py  test_create.py  test_definition.py  test_destroy.py  test_ednify.py  test_instance.py  test_kim_property.py  test_modify.py  test_numeric.py  (+1 more)
(+90 files in other folders)
