[build-system]
requires = ["setuptools", "versioneer[toml]", "kim-edn"]
build-backend = "setuptools.build_meta"

[project]
name = "kim-property"
authors = [{ name = "Yaser Afshar", email = "ya.afshar@gmail.com" }]
maintainers = [{ name = "Yaser Afshar", email = "ya.afshar@gmail.com" }]
description = "kim-property - KIM-PROPERTY utility module."
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Programming Language :: Python :: 3",
]
dynamic = [ "version" ]
keywords = [ "kim-property" ]

[project.urls]
Homepage = "https://github.com/openkim/kim-property"
Issues = "https://github.com/openkim/kim-property/issues"

[tool.versioneer]
VCS = "git"
versionfile_source = "kim_property/_version.py"
versionfile_build = "kim_property/_version.py"
tag_prefix = "kim_property-"
parentdir_prefix = "kim_property-"
